# nvllm

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: docker-publish.yml
benchmarks/nvllm/: fp4_mma_test.py  test_degradation.sh
docker/: Dockerfile.gb10
docs/blessed-caches/: README.md  qwen35-27b-nvfp4_fap_lower8_image-a3f3f60_e6d32b4.json  qwen35-27b-nvfp4_fap_lower8_image-b6f87f5_93527b3.json
docs/contributing/: design-tenets.md
docs/design/: attention_backends.md
docs/kernel-insights/: 2026-04-10-b12x-cute-attention.md  (+5 more)
docs/research/gemm_sweep/microbench/: CMakeLists.txt  configs.hpp  configs_generated.hpp  gen_configs.py  gen_dispatcher.py  main.cu  main_dispatch.hpp
scripts/: bench_nvfp4.sh  bless-cute-full-cache.sh  bless_cute_full_cache.py  common.sh  eval_aime.sh  eval_all.sh  eval_gpqa_diamond.sh  fusion_phaseb_diff.py  gsm8k_eval_50.py  gsm8k_sanity.py  multi_turn_smoke.py  nvmon  phase_d2_trace_capture.sh  phase_d2e_trace_capture.sh  phase_d3a_sweep.sh  phase_d_trace_capture.sh  precompile-cute-coop-full.py  precompile-cute-coop-full.sh  profile_cute_paged.sh  profile_nvfp4.sh  run_gemma4.sh  run_nemotron.sh  run_qwen35.sh  run_qwen35_27b.sh  run_qwen35_27b_cute_paged.sh  run_qwen35_27b_nvfp4-opus.sh  run_qwen35_27b_nvfp4.sh  run_qwen35_agents.sh  run_qwen3_coder_next.sh  sanity.sh  serve-cute-full.sh  serve-cute-mtp.sh  serve-cute.sh  serve-gemma4.sh  serve-nemotron.sh  serve-qwen35-full.sh  serve-qwen35-triton.sh  serve-qwen35.sh  serve-qwen36.sh  serve.sh  (+10 more)
templates/: nemotron_no_think.jinja
(+1196 files in other folders)
